<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.dreamfactory.bluetooth.view.fragment.SettingDetailFragment">

    <LinearLayout
        android:id="@+id/section_one_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/settings_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/label_tips_01"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:labelFor="@string/app_name"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/label_tips_02"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/label_tips_03"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:labelFor="@string/app_name"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/label_tips_04"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_weight="0.5"/>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/section_two_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/section_one_layout"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:background="@drawable/settings_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/label_tips_05"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/label_tips_06"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/label_tips_07"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/label_tips_08"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/label_tips_09"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/label_tips_10"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/label_tips_11"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/label_tips_12"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"
                android:layout_weight="0.5"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
