<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.dreamfactory.bluetooth.view.fragment.SettingDetailFragment">

    <LinearLayout
        android:id="@+id/section_one_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/settings_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/label_tips_13"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:labelFor="@string/app_name"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/label_tips_14"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/label_tips_15"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:labelFor="@string/app_name"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/label_tips_16"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/label_tips_17"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_weight="0.5"/>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/section_two_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/section_one_layout"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:background="@drawable/settings_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/label_tips_18"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/label_tips_19"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/label_tips_20"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/label_tips_21"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/label_tips_22"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/label_tips_23"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"
                android:layout_weight="0.5"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
