<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:fitsSystemWindows="true"
              android:orientation="vertical"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              tools:context=".view.fragment.ConfigSettingFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/label_tips_13"
            android:textColor="@color/setting_font_text" />

        <Switch
            android:layout_alignParentRight="true"
            android:id="@+id/timming_setting"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/setting_line" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/label_tips_14"
            android:textColor="@color/setting_font_text" />

        <TextView
            android:id="@+id/start_timming_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/setting_font_text"
            android:layout_centerVertical="true"
            android:drawableRight="@mipmap/ic_navigate_next"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:singleLine="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/setting_line" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/label_tips_15"
            android:textColor="@color/setting_font_text" />

        <TextView
            android:id="@+id/start_timming_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/setting_font_text"
            android:layout_centerVertical="true"
            android:drawableRight="@mipmap/ic_navigate_next"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:singleLine="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/setting_line" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/label_tips_16"
            android:textColor="@color/setting_font_text" />

        <TextView
            android:id="@+id/end_timming_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/setting_font_text"
            android:layout_centerVertical="true"
            android:drawableRight="@mipmap/ic_navigate_next"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:singleLine="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/setting_line" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/label_tips_17"
            android:textColor="@color/setting_font_text" />

        <TextView
            android:id="@+id/end_timming_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/setting_font_text"
            android:layout_centerVertical="true"
            android:drawableRight="@mipmap/ic_navigate_next"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:singleLine="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/setting_line" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/label_tips_05"
            android:textColor="@color/setting_font_text" />

        <TextView
            android:id="@+id/inflated_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/setting_font_text"
            android:layout_centerVertical="true"
            android:drawableRight="@mipmap/ic_navigate_next"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:singleLine="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/setting_line" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/label_tips_06"
            android:textColor="@color/setting_font_text" />

        <TextView
            android:id="@+id/deflate_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/setting_font_text"
            android:layout_centerVertical="true"
            android:drawableRight="@mipmap/ic_navigate_next"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:singleLine="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/setting_line" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/label_tips_07"
            android:textColor="@color/setting_font_text" />

        <TextView
            android:id="@+id/working_threshold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/setting_font_text"
            android:layout_centerVertical="true"
            android:drawableRight="@mipmap/ic_navigate_next"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:singleLine="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/setting_line" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/label_tips_08"
            android:textColor="@color/setting_font_text" />

        <TextView
            android:id="@+id/degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/setting_font_text"
            android:layout_centerVertical="true"
            android:drawableRight="@mipmap/ic_navigate_next"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:singleLine="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/setting_line" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/label_tips_09"
            android:textColor="@color/setting_font_text" />

        <TextView
            android:id="@+id/woking_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/setting_font_text"
            android:layout_centerVertical="true"
            android:drawableRight="@mipmap/ic_navigate_next"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:singleLine="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/setting_line" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/label_tips_10"
            android:textColor="@color/setting_font_text" />

        <Switch
            android:layout_alignParentRight="true"
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/setting_line" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/label_tips_11"
            android:textColor="@color/setting_font_text" />

        <Switch
            android:layout_alignParentRight="true"
            android:id="@+id/reset_data"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/setting_line" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/label_tips_12"
            android:textColor="@color/setting_font_text" />

        <Switch
            android:layout_alignParentRight="true"
            android:id="@+id/clear_data"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/setting_line" />
    </RelativeLayout>

</LinearLayout>
